Animation noch nicht fertig

--- a/TimerApp/Base.lproj/Main.storyboard
+++ b/TimerApp/Base.lproj/Main.storyboard
@@ -17,10 +17,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="TFb-JL-ifl">
-                                <rect key="frame" x="40" y="462" width="334" height="360"/>
+                                <rect key="frame" x="57" y="392" width="300" height="360"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJl-Mw-RiO">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="56"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="30 Min.">
+                                            <backgroundConfiguration key="background">
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </backgroundConfiguration>
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="35"/>
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="addSeconds:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3FB-30-T8L"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTa-3l-RAN">
+                                        <rect key="frame" x="0.0" y="76" width="300" height="56"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="5 Min.">
+                                            <backgroundConfiguration key="background">
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </backgroundConfiguration>
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="35"/>
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="minusSeconds:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XdA-I8-a4F"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gUJ-wz-hNB">
-                                        <rect key="frame" x="0.0" y="0.0" width="334" height="56"/>
+                                        <rect key="frame" x="0.0" y="152" width="300" height="56"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Start">
@@ -35,7 +63,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M0d-Xf-N6F">
-                                        <rect key="frame" x="0.0" y="76" width="334" height="56"/>
+                                        <rect key="frame" x="0.0" y="228" width="300" height="56"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Pause">
                                             <backgroundConfiguration key="background">
@@ -48,7 +76,10 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x6V-XJ-Apn">
-                                        <rect key="frame" x="0.0" y="152" width="334" height="56"/>
+                                        <rect key="frame" x="0.0" y="304" width="300" height="56"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="qVh-Ss-9sB"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Reset">
                                             <backgroundConfiguration key="background">
@@ -61,55 +92,31 @@
                                             <action selector="resetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cBq-Q3-9Q0"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJl-Mw-RiO">
-                                        <rect key="frame" x="0.0" y="228" width="334" height="56"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="+5">
-                                            <backgroundConfiguration key="background">
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                            </backgroundConfiguration>
-                                            <fontDescription key="titleFontDescription" type="system" pointSize="35"/>
-                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="addSeconds:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3FB-30-T8L"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTa-3l-RAN">
-                                        <rect key="frame" x="0.0" y="304" width="334" height="56"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="-5">
-                                            <backgroundConfiguration key="background">
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                            </backgroundConfiguration>
-                                            <fontDescription key="titleFontDescription" type="system" pointSize="35"/>
-                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="minusSeconds:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XdA-I8-a4F"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="x6V-XJ-Apn" firstAttribute="centerX" secondItem="TFb-JL-ifl" secondAttribute="centerX" id="3nQ-GC-2w2"/>
+                                    <constraint firstItem="ZJl-Mw-RiO" firstAttribute="centerX" secondItem="TFb-JL-ifl" secondAttribute="centerX" id="NaA-yS-4it"/>
+                                </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zuO-d3-MJK">
-                                <rect key="frame" x="20" y="177" width="374" height="60"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zuO-d3-MJK">
+                                <rect key="frame" x="161.5" y="153" width="91" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="E3a-bZ-sJJ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="75"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TFb-JL-ifl" secondAttribute="trailing" constant="40" id="17N-rt-vWs"/>
-                            <constraint firstItem="TFb-JL-ifl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="OYN-VT-QR9"/>
-                            <constraint firstItem="zuO-d3-MJK" firstAttribute="centerX" secondItem="TFb-JL-ifl" secondAttribute="centerX" id="Pgr-if-4rL"/>
-                            <constraint firstItem="zuO-d3-MJK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="TPS-my-thm"/>
-                            <constraint firstItem="zuO-d3-MJK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="133" id="fvA-Wt-Fzt"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TFb-JL-ifl" secondAttribute="bottom" constant="40" id="w3k-j8-g40"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TFb-JL-ifl" secondAttribute="bottom" constant="110" id="226-Bf-5es"/>
+                            <constraint firstItem="zuO-d3-MJK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DTi-dB-wJj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TFb-JL-ifl" secondAttribute="trailing" constant="57" id="Ggs-Ft-F3H"/>
+                            <constraint firstItem="zuO-d3-MJK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="TPS-my-thm"/>
+                            <constraint firstItem="zuO-d3-MJK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="109" id="fvA-Wt-Fzt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zuO-d3-MJK" secondAttribute="trailing" constant="161.5" id="vEF-gD-BLH"/>
                         </constraints>
                     </view>
                     <connections>
